# Pi-Assistant

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  DEVELOPMENT.md  GEMINI.md  MOLTBOT_PARITY_ROADMAP.md  READABILITY_ROADMAP.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  TUTORIAL.md  cypress.config.ts  index.html  justfile  package-lock.json  package.json  pyproject.toml  soul.md  tailwind.config.js  vite.config.ts
crates/pi-ai/: Cargo.toml
crates/pi-ai/src/: lib.rs
crates/pi-core/: Cargo.toml
crates/pi-core/migrations/: 20260201_create_subtasks.sql
crates/pi-core/src/: agent_types.rs  lib.rs  protocol.rs  task_manager.rs
sidecar/: README.md  pyproject.toml
sidecar/src/pi_sidecar/: __init__.py  __main__.py  personality.py
sidecar/src/pi_sidecar/configs/: __init__.py  model.py
sidecar/src/pi_sidecar/inference/: __init__.py  completion.py  embeddings.py  engine.py
sidecar/src/pi_sidecar/ipc/: __init__.py  handler.py  ndjson_transport.py
sidecar/src/pi_sidecar/ml/: __init__.py  exceptions.py
sidecar/src/pi_sidecar/ml/configs/: __init__.py  algorithm.py  base.py  data.py  env.py  model.py  optimization.py  security.py  storage.py
sidecar/src/pi_sidecar/ml/data/: __init__.py  data_utils.py  dataloaders.py  download_dataset.py  polymarket_dataset.py  prefetch_dataloader.py  streaming.py  time_series_dataset.py
sidecar/src/pi_sidecar/ml/db/: __init__.py  cache.py  models.py
sidecar/src/pi_sidecar/ml/envs/: __init__.py  base.py  env_wrapper.py  envs.py  factory.py  trading_env.py  vectorized_env.py
sidecar/src/pi_sidecar/ml/features/: __init__.py  feature_selection.py  normalization.py  pipeline.py  regime.py
sidecar/src/pi_sidecar/ml/models/: __init__.py  base.py  composed.py  deep_factory.py  ensemble.py  helper_factory.py  mac_factory.py  meta_learner.py  registry.py  time_series.py
sidecar/src/pi_sidecar/ml/models/attention/: __init__.py  attention_net.py  nstransformer.py
sidecar/src/pi_sidecar/ml/models/autoencoders/: __init__.py  ae.py  dae.py  sae.py  stacked_ae.py  vae.py
sidecar/src/pi_sidecar/ml/models/backbones/: __init__.py  base.py  conv.py  lstm.py  mamba.py  transformer.py
sidecar/src/pi_sidecar/ml/models/competitive/: __init__.py  lvq.py  som.py
sidecar/src/pi_sidecar/ml/models/convolutional/: __init__.py  capsule.py  cnn.py  dcign.py  dcn.py  deconv.py  resnet.py
sidecar/src/pi_sidecar/ml/models/factories/: __init__.py  attention.py  base.py  convolutional.py  recurrent.py
sidecar/src/pi_sidecar/ml/models/general/: __init__.py  elm.py  mlp.py  node.py  perceptron.py  pinn.py  rbf.py
sidecar/src/pi_sidecar/ml/models/graphs/: __init__.py  distance_graph_convolution.py  efficient_graph_convolution.py  gated_graph_convolution.py  graph_convolution.py
sidecar/src/pi_sidecar/ml/models/heads/: __init__.py  base.py  classification.py  regression.py  rl_policy.py  sequence.py
sidecar/src/pi_sidecar/ml/models/helper/: __init__.py  association_rule.py  clustering.py  dim_reduction.py
sidecar/src/pi_sidecar/ml/models/mac/: __init__.py  base.py  boosting.py  ensemble.py  linear.py  naive_bayes.py  neighbors.py  svm.py  trees.py
sidecar/src/pi_sidecar/ml/models/memory/: __init__.py  dnc.py  ntm.py
sidecar/src/pi_sidecar/ml/models/modules/: __init__.py  activation_function.py  connections.py  embed.py  hyper_connection.py  mamba_block.py  multi_head_attention.py  normalization.py  (+3 more)
sidecar/src/pi_sidecar/ml/pipeline/: __init__.py  accelerated.py  base.py  callbacks.py  distributed_train.py  evaluate_agents.py  factory.py  train.py
sidecar/src/pi_sidecar/ml/presets/: rl_ppo_mamba.yaml  supervised_classification.yaml
sidecar/src/pi_sidecar/ml/utils/: __init__.py  config.py  definitions.py  mixed_precision.py  registry.py
sidecar/src/pi_sidecar/models/: __init__.py  registry.py
sidecar/src/pi_sidecar/stt/: whisper.py
sidecar/src/pi_sidecar/training/: __init__.py  data_module.py  lightning_module.py  service.py  trainer.py
sidecar/src/pi_sidecar/tts/: elevenlabs.py
sidecar/tests/: conftest.py  test_inference_engine.py  test_ipc_transport.py
sidecar/tests/fixtures/: inference.py  ipc.py
sidecars/logic/: README.md  pyproject.toml
sidecars/logic/src/pi_sidecar/: logic_main.py  personality.py
sidecars/logic/src/pi_sidecar/configs/: __init__.py  model.py  run.py
sidecars/logic/src/pi_sidecar/constants/: __init__.py  personality.py
sidecars/logic/src/pi_sidecar/enums/: __init__.py  run.py
sidecars/logic/tests/: conftest.py  test_logic.py
sidecars/ml/: README.md  pyproject.toml
sidecars/shared/: README.md  pyproject.toml
sidecars/shared/src/pi_sidecar/: personality.py
sidecars/shared/src/pi_sidecar/enums/: run.py
sidecars/shared/src/pi_sidecar/ipc/: __init__.py  ndjson_transport.py
sidecars/shared/tests/: conftest.py  test_enums.py  test_ipc.py  test_personality.py
sidecars/shared/tests/fixtures/: sample_soul.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/agent/: cost.rs  executor.rs  loop.rs  mod.rs  monitor.rs  planner.rs  pool.rs  transaction.rs
src-tauri/src/channels/: discord.rs  mod.rs  telegram.rs
src-tauri/src/commands/: agent.rs  auth.rs  chat.rs  config.rs  cron.rs  device.rs  mod.rs  sidecar.rs  voice.rs
src-tauri/src/cron/: mod.rs
src-tauri/src/ipc/: mod.rs  sidecar.rs
src-tauri/src/mcp/: client.rs  config.rs  mod.rs
src-tauri/src/memory/: embeddings.rs  mod.rs  sqlite.rs  summarization.rs  vector.rs
src-tauri/src/safety/: mod.rs  permission.rs  rules.rs
src-tauri/src/skills/: mod.rs
src-tauri/src/tools/: api.rs  browser.rs  canvas.rs  code.rs  cron.rs  database.rs  deployed_model.rs  diagram.rs  graph.rs  knowledge.rs  mcp.rs  mod.rs  rag.rs  sessions.rs  shell.rs  system.rs  training.rs
src-tauri/src/voice/: audio.rs  mod.rs  wake.rs
src-tauri/src/ws/: handler.rs  mod.rs  server.rs
src-tauri/tests/: sidecar_lifecycle.rs
(+246 files in other folders)
