[workspace]
resolver = "2"
members = ["src-tauri", "crates/pi-core", "protocol/rust"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Pi-Assistant Contributors"]
repository = "https://github.com/pkhunter/Pi-Assistant"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Web server (for mobile client)
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client (for LLM APIs)
reqwest = { version = "0.12", features = ["json", "default-tls"] }

# Headless browser
chromiumoxide = { version = "0.7", default-features = false, features = [
    "tokio-runtime",
] }
futures = "0.3"

# Internal crates
pi-core = { path = "crates/pi-core" }
pi-protocol = { path = "protocol/rust" }
