[project]
name = "pi-assistant-root"
version = "0.1.0"
description = "Root configuration for Pi-Assistant workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.workspace]
members = ["sidecars/ml", "sidecars/logic", "sidecars/shared"]

[tool.uv.sources]
pi-sidecar-shared = { workspace = true }
machine-learning-zoo = { workspace = true }
pi-sidecar-logic = { workspace = true }

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
