[project]
name = "pi-sidecar"
version = "0.1.0"
description = "Pi-Assistant Python sidecar for ML inference and training"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [{ name = "Pi-Assistant Contributors" }]

dependencies = [
    # ML Core
    "torch>=2.5.0",
    "pytorch-lightning>=2.4.0",
    "transformers>=4.47.0",
    "sentence-transformers>=3.4.0",
    "llama-cpp-python>=0.3.0",
    # LLM Providers
    "anthropic>=0.42.0",
    "google-generativeai>=0.8.0",
    "google-genai>=0.3.0",
    "google-auth>=2.30.0",
    # Utilities
    "pydantic>=2.10.0",
    "aiofiles>=24.1.0",
    "numpy>=2.4.1",
    "httpx>=0.28.1",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.25.0", "ruff>=0.9.0"]
voice = [
    "elevenlabs>=1.0.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "openai>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_sidecar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]
