[package]
name = "pi-assistant"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Universal Agent Harness - Desktop Application"

[lib]
name = "pi_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.2", features = ["tray-icon"] }
tauri-plugin-shell = "2.2"

# Workspace dependencies
tokio.workspace = true
tokio-util.workspace = true
tokio-cron-scheduler.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rusqlite.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
chromiumoxide.workspace = true
futures.workspace = true
async-trait = "0.1"
regex = "1"
dirs = "5"
base64 = "0.22"
url = "2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
teloxide = { version = "0.14", default-features = false, features = [
    "macros",
    "rustls",
    "ctrlc_handler",
] }
cpal = "0.15"
hound = "3.5"
vosk = "0.3"
serenity = { version = "0.12", default-features = false, features = [
    "rustls_backend",
    "client",
    "gateway",
    "model",
    "standard_framework",
    "utils",
] }
serde_yaml = "0.9"
chrono-tz = "0.9"

# Internal crates
pi-core.workspace = true
pi-protocol.workspace = true
openapiv3 = "2.2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
