[package]
name = "pi-ai"
version = "0.1.0"
edition = "2021"
description = "Client-side AI inference using Candle (Wasm)"

[lib]
crate-type = ["cdylib"]

[dependencies]
candle-core = { version = "0.3.3", default-features = false }
candle-nn = { version = "0.3.3", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
gemm = { version = "0.16.15" }
half = { version = "2.3.1" }
serde-wasm-bindgen = "0.6"
