[project]
name = "pi-sidecar-logic"
version = "0.1.0"
description = "Pi-Assistant Python sidecar for general logic and personality"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "numpy>=2.4.1",
    "pyyaml>=6.0.0",
    "pi-sidecar-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
