[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pi-sidecar-shared"
version = "0.1.0"
description = "Shared components for Pi-Assistant sidecars"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/pi_sidecar"]
